# instacart-history-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yml
docs/: api.md  configuration.md  security.md
instacart_history/: api.py  config.py  importer.py  main.py  matcher.py  repository.py  service.py
tests/: test_api.py  test_importer.py  test_matching.py
